2019-04-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix the build after commit e92ec3140a1c81dbf86d90d0155cb2e08f519db2

	* src/main-window.c (bw_update_progress_bar): cast with
	'(GSourceFunc)', not with 'G_SOURCE_FUNC()', since we do not yet
	require GLib 2.58!

2019-04-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	geometry-manager: Remove a not-reached assertion

	* libbalsa/geometry-manager.c (geometry_manager_init): a second
	call with the same key is not necessarily an error.

2019-04-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Call Gtk only from the main thread
	https://mail.gnome.org/archives/balsa-list/2019-April/msg00006.html

	* src/main-window.c (bw_update_progress_bar_idle_cb): idle
	handler for calling gtk_status_bar_set_{fraction,text};
	(bw_update_progress_bar): schedule the idle handler;
	(bw_progress_bar_set_text), (bw_progress_bar_set_fraction):
	convenience functions for calling bw_update_progress_bar();
	(balsa_window_increase_activity),
	(balsa_window_decrease_activity), (balsa_window_setup_progress),
	(balsa_window_increment_progress): use them.

2019-04-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use more precise types

	* libbalsa/mailbox.c (mbox_model_init), (mbox_model_get_value):
	Use the GTypes that are expected in
	gtk_cell_renderer_text_set_property().

2019-04-01  Albrecht Dreß  <albrecht.dress@arcor.de>

	Improve IMAP folder parent selection, subscription management

	* libbalsa/folder-scanners.[ch]: implement new function
	libbalsa_scanner_imap_tree() for scanning an IMAP server's
	folder structure and subscription state into a GtkTreeStore,
	requires a bunch of helper functions
	* libbalsa/imap-server.[ch]: implement new function
	libbalsa_imap_server_subscriptions() for subscribing to and
	unsubscribing from arrays of folders using a single IMAP
	connection
	* libbalsa/mailbox_imap.[ch]: remove unused function
	libbalsa_mailbox_imap_subscribe() (obsoleted by
	libbalsa_imap_server_subscriptions())